@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.82 2000/09/01 14:39:21 stelian Exp $
+$Id: CHANGES,v 1.83 2000/09/26 12:34:51 stelian Exp $
 
 Changes between versions 0.4b19 and 0.4b20 (released ???????????????)
 =====================================================================
@@ -25,6 +25,11 @@ Changes between versions 0.4b19 and 0.4b20 (released ???????????????)
 	to exclude the root inode (which causes the dumps to
 	be unreadable by restore). Prevented array overflow
 	when multiple -e options are used.
+
+5.	Fixed dump to correctly interpret a filesystem argument
+	which is a mountpoint and it is not an absolute path 
+	(as specified in the fstab). Thanks to Bernhard R. Erdmann 
+	<be@berdmann.de> for reporting the bug.
 
 Changes between versions 0.4b18 and 0.4b19 (released August 20, 2000)
 =====================================================================
